// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Typography snapshots > matches snapshot: Blockquote 1`] = `
<div>
  <span
    class="mt-4 border-l-2 border-border pl-6 italic"
  >
    "After all," he said, "everyone enjoys a good joke, so it's only fair that they pay for the privilege."
  </span>
</div>
`;

exports[`Typography snapshots > matches snapshot: Display1 1`] = `
<div>
  <span
    class="scroll-m-20 text-4xl font-bold tracking-tight text-balance"
  >
    Taxing Laughter: The Joke Tax Chronicles
  </span>
</div>
`;

exports[`Typography snapshots > matches snapshot: Display2 1`] = `
<div>
  <span
    class="scroll-m-20 border-b border-border pb-2 text-3xl font-semibold tracking-tight first:mt-0"
  >
    The People of the Kingdom
  </span>
</div>
`;

exports[`Typography snapshots > matches snapshot: Display3 1`] = `
<div>
  <span
    class="scroll-m-20 text-2xl font-semibold tracking-tight"
  >
    The Joke Tax
  </span>
</div>
`;

exports[`Typography snapshots > matches snapshot: Display4 1`] = `
<div>
  <span
    class="scroll-m-20 text-xl font-semibold tracking-tight"
  >
    People stopped telling jokes
  </span>
</div>
`;

exports[`Typography snapshots > matches snapshot: Large 1`] = `
<div>
  <span
    class="text-lg font-semibold"
  >
    Are you sure absolutely sure?
  </span>
</div>
`;

exports[`Typography snapshots > matches snapshot: Lead 1`] = `
<div>
  <span
    class="text-xl text-muted-foreground"
  >
    A modal dialog that interrupts the user with important content.
  </span>
</div>
`;

exports[`Typography snapshots > matches snapshot: Link 1`] = `
<div>
  <a
    class="font-medium text-link underline underline-offset-4 hover:text-link-hover active:text-link-pressed"
    href="#"
  >
    Read the documentation
  </a>
</div>
`;

exports[`Typography snapshots > matches snapshot: Muted 1`] = `
<div>
  <span
    class="text-sm text-muted-foreground"
  >
    Enter your email address.
  </span>
</div>
`;

exports[`Typography snapshots > matches snapshot: P 1`] = `
<div>
  <span
    class="leading-relaxed [&:not(:first-child)]:mt-4"
  >
    The king, seeing how much happier his subjects were, realized the error of his ways and repealed the joke tax.
  </span>
</div>
`;

exports[`Typography snapshots > matches snapshot: RelaxedLineHeightOverride 1`] = `
<div>
  <span
    class="text-sm font-medium leading-relaxed"
  >
    Email address
  </span>
</div>
`;

exports[`Typography snapshots > matches snapshot: Small 1`] = `
<div>
  <span
    class="text-sm leading-none font-medium"
  >
    Email address
  </span>
</div>
`;
